--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 \*\/$
 ]]>
     </checkstyle.header.template>
-
+<!-- test comment -->
     <version.org.kie>${project.version}</version.org.kie>
     <version.google.api.services.calendar>v3-rev87-1.19.0</version.google.api.services.calendar>
     <version.google.api.services.gmail>v1-rev72-1.23.0</version.google.api.services.gmail>
